--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/Style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="header-top">
       <div class="header-top-wrapper wrap">
         <div class="h-left">
-          <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110" height="20" alt="Логотип"></a>
+          <a href="index.html" class="logo"><img src="img/logo-technomart.svg" width="110" height="20" alt="Логотип"></a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
             <input class="search" type="search" name="search" id="search" placeholder="Поиск:" aria-label="search">
             <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
@@ -466,7 +466,7 @@
     </article>
   </main>
 
-  <footer>
+  <footer class="footer">
     <section class="footer-top">
       <div class="wrap">
         <div class="footer-column-1">
