--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="footer">
     <section class="footer-top">
       <div class="wrap">
         <div class="footer-column-1">
