--- a/catalog.html
+++ b/catalog.html
@@ -528,7 +528,7 @@
     </section>
   </footer>
 
-  <div class="catalog-buy-popup popup-hide">
+  <div class="catalog-buy-popup popup popup-hide">
     <div class="catalog-popup-row-1">
       <p>Товар добавлен в корзину!</p>
     </div>
@@ -539,7 +539,7 @@
     <button class="catalog-buy-close" type="button">Закрыть</button>
   </div>
 
-
+  <script src="js/script.js"></script>
 </body>
 
 </html>
