Правки перед защитой(№3)

--- a/catalog.html
+++ b/catalog.html
@@ -534,12 +534,12 @@
     </div>
     <div class="catalog-popup-row-2">
       <a class="button" href="#">Оформить заказ</a>
-      <button class="button" type="button">Продожить покупки</button>
+      <button class="button catalog-button-skip" type="button">Продожить покупки</button>
     </div>
     <button class="catalog-buy-close" type="button">Закрыть</button>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
